style(frontend): advanced search filter button alignement fix

--- a/frontend/src/css/AdvancedSearch.styl
+++ b/frontend/src/css/AdvancedSearch.styl
@@ -26,8 +26,10 @@
       color lightDarkGrey
       display flex
       height 45px
-      justify-content space-between
       margin-top standardSpacing
+
+      &__filter_button
+        margin-inline-start auto
 
     &__empty
       margin-top 50px
